[metadata]
name = openpathsampling-openmmtools
version = 0.0.1.dev0
description = Tools for integrating OpenPathSampling and OpenMMTools
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson
author_email = dwhs@hyperblazer.net
license = MIT
url = https://github.com/dwhswenson/openpathsampling-openmmtools
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
include_package_data = True
install_requires =
    openpathsampling-cli
    # note: technically this requires openmmtools, but that's not
    # pip-installable
namespace_packages = paths_cli_plugins

[bdist_wheel]
universal=1
